Password reset fix, typos, exception errors fix, ....

--- a/app/templates/contents/members-area/errors/list.html.twig
+++ b/app/templates/contents/members-area/errors/list.html.twig
@@ -21,6 +21,7 @@
                 <tr>
                     <th>{{ paginator_sortable(pagination, 'Code', 'e.code') }}</th>
                     <th>{{ paginator_sortable(pagination, 'Message', 'e.message') }}</th>
+                    <th>{{ 'Exception' | trans }}</th>
                     <th width="160">{{ paginator_sortable(pagination, 'Time Created', 'e.timeCreated') }}</th>
                 </tr>
             </thead>
@@ -29,6 +30,15 @@
                     <tr>
                         <td>{{ error.getCode() }}</td>
                         <td>{{ error.getMessage() }}</td>
+                        <td>
+                            <button type="button" class="btn btn-primary btn-sm"
+                                data-toggle="modal" data-target="#error-exception-modal"
+                                data-id="{{ error.getId() }}">
+                                {{ 'Show' | trans }}
+                            </button>
+                            <div id="error-exception-{{ error.getId() }}"
+                                class="hidden">{{ error.getException() }}</div>
+                        </td>
                         <td>{{ error.getTimeCreated() | date(app.date_time_format) }}</td>
                     </tr>
                 {% else %}
@@ -42,4 +52,59 @@
         </table>
     </div>
     {{ paginator_bottom_render(pagination) }}
+{% endblock %}
+
+{% block wrapper_after %}
+    <div id="error-exception-modal"
+        class="modal fade"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="error-exception-modal"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button"
+                        class="close"
+                        data-dismiss="modal"
+                        aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 id="error-exception-modal-title"
+                        class="modal-title">
+                        {{ 'Error exception' | trans }}
+                    </h4>
+                </div>
+                <div id="error-exception-modal-body" class="modal-body"></div>
+                <div class="modal-footer">
+                    <button class="btn btn-default"
+                        type="button"
+                        data-dismiss="modal">
+                        {{ 'Close' | trans }}
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block body_javascripts_after %}
+    <script>
+        jQuery(document).ready(function() {
+            jQuery('#error-exception-modal').on(
+                'show.bs.modal',
+                function (event) {
+                    var button = jQuery(event.relatedTarget);
+                    var id = button.attr('data-id');
+                    var modal = jQuery(this);
+                    var content = jQuery('#error-exception-' + id).html();
+
+                    modal.find('.modal-body').html((content
+                        ? '<pre>' + syntaxHighlight(JSON.stringify(JSON.parse(content), undefined, 4)) + '</pre>'
+                        : '{{ 'No data!' | trans }}'
+                    ));
+                }
+            );
+        });
+    </script>
 {% endblock %}
