--- a/app/templates/contents/members-area/statistics/index.html.twig
+++ b/app/templates/contents/members-area/statistics/index.html.twig
@@ -28,7 +28,7 @@
                                 {{ app['orm.em'].getRepository('Application\\Entity\\UserEntity').countAll() }}
                             </span>
                         </li>
-                        <li></li>
+                        <li class="list-group-item"></li>
                         <li class="list-group-item">
                             {{ 'Actions' | trans }}
                             <span class="badge">
