--- a/app/templates/contents/members-area/reset-password.html.twig
+++ b/app/templates/contents/members-area/reset-password.html.twig
@@ -11,8 +11,7 @@
         <div class="alert alert-{{ alert }}">
             {{ alertMessage | trans | raw }}
         </div>
-    {% endif %}
-    {% if alert == false %}
+    {% else %}
         {{ form(form) }}
     {% endif %}
 {% endblock %}
