Dependency fixes & few naming changes (events)

--- a/app/templates/layouts/default/_footer.html.twig
+++ b/app/templates/layouts/default/_footer.html.twig
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md-6">
             <div id="copyright">
-                {{ 'Copyright' | trans }} &copy; 2015 -
+                {{ 'Copyright' | trans }} &copy; 2015 - 2017 &middot;
                 Made with <i class="fa fa-fw fa-heart heartbeat-animation" style="color: #FE0E39;"></i>
                 in EU
                 by
