Initial work on silex v2 migration

--- a/app/templates/contents/members-area/my/password.html.twig
+++ b/app/templates/contents/members-area/my/password.html.twig
@@ -21,5 +21,8 @@
             {{ 'Password' | trans }}
         </li>
     </ol>
-    {{ form(form) }}
+    {{ form_start(form) }}
+        {{ form_row(form.oldPassword) }}
+        {{ form_row(form.plainPassword) }}
+    {{ form_end(form) }}
 {% endblock %}
